Updated facebook pixel code to use dynamic trigger value PageView vs CompleteRegistration; reduced spacing around single post images and fixed undefined var errors

--- a/wp-content/themes/CORE/assets/styles/layouts/_posts.scss
+++ b/wp-content/themes/CORE/assets/styles/layouts/_posts.scss
@@ -12,8 +12,8 @@
 	}
 	.entry-content {
 		img {
-			padding-top:3rem;
-			padding-bottom:3rem;
+			padding-top:1rem;
+			padding-bottom:1rem;
 		}
 	}
 	footer.article-footer {
